--- a/arch/xtensa/Kconfig
+++ b/arch/xtensa/Kconfig
@@ -9,11 +9,7 @@ config XTENSA
 	select HAVE_IDE
 	select HAVE_GENERIC_HARDIRQS
 	select GENERIC_IRQ_SHOW
-	select GENERIC_CPU_DEVICES
-	help
-	  Xtensa processors are 32-bit RISC machines designed by Tensilica
-	  primarily for embedded systems.  These processors are both
-	  configurable and extensible.  The Linux port to the Xtensa
+	select GENERIC_CPU_DEVICESe.  The Linux port to the Xtensa
 	  architecture supports all processor configurations and extensions,
 	  with reasonable minimum requirements.  The Xtensa Linux project has
 	  a home page at <http://xtensa.sourceforge.net/>.
